force-app/main/default/objects/Inspeccion_Tecnica__c/Inspeccion_Tecnica__c.object-meta.xml
<CustomObject>
    <description>Almacena los resultados de las inspecciones técnicas realizadas en campo por los técnicos de Pyatz.</description>
    <label>Inspección Técnica</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Folio Inspección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspecciones Técnicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>