force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Cita_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Cita_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita de Servicio</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Inspecciones Técnicas</relationshipLabel>
    <relationshipName>Inspecciones_Tecnicas</relationshipName>
    <type>Lookup</type>
</CustomField>