force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Deficiencias_Detectadas__c.field-meta.xml
<CustomField>
    <fullName>Deficiencias_Detectadas__c</fullName>
    <description>Resumen consolidado de las áreas de oportunidad para mostrar en el reporte PDF.</description>
    <label>Deficiencias Detectadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>