force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Levantamiento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Levantamiento técnico que dio origen a esta inspección.</description>
    <label>Levantamiento Técnico</label>
    <referenceTo>Levantamiento_Tecnico__c</referenceTo>
    <relationshipLabel>Inspecciones Técnicas</relationshipLabel>
    <relationshipName>Inspecciones_Tecnicas</relationshipName>
    <type>Lookup</type>
</CustomField>