force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Respuestas_JSON__c.field-meta.xml
<CustomField>
    <fullName>Respuestas_JSON__c</fullName>
    <description>Contiene el volcado de todas las preguntas, respuestas y deficiencias en formato JSON para máxima flexibilidad.</description>
    <label>Respuestas JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>