force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Tipo_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Reporte__c</fullName>
    <label>Tipo de Reporte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>