force-app/main/default/objects/Inspeccion_Tecnica__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <description>Almacena el nombre de la zona específica (punto de control) a la que pertenece esta inspección (ej. Lavaloza, Cochambre).</description>
    <label>Zona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>